# msfs-navigation-data-interface

./: .dockerignore  .eslintrc  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  CODEOWNERS  Cargo.toml  DOCS.md  Dockerfile  LICENSE  README.md  bun.lockb  bunfig.toml  env.d.ts  eslint.config.mjs  jest.config.ts  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml  tsconfig.json
.cargo/: config.toml
.github/workflows/: autolabel.yml  build.yml  cache.yml  pr.yml  pre-release.yml  push.yml  release.yml
Sources/Art/Max/: GaugeAircraft_Interior.max2016
Sources/Code/TypeScript/: .eslintrc.js  MyComponent.tsx  MyInstrument.css  MyInstrument.html  MyInstrument.tsx  README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json
Sources/Code/WASM/: GetCallback.cpp  GetGauge.h  GetLoop.cpp  SampleWasmModule.sln  SampleWasmModule.vcxproj  SampleWasmModule.vcxproj.filters  Upload.cpp
Sources/Code/WASM/navdata_updater/: Cargo.toml  README.md  build.bat  copy.bat  run_cargo_cmd.bat
Sources/Code/WASM/navdata_updater/.cargo/: config.toml
Sources/Code/WASM/navdata_updater/scripts/: build.sh  cargo_cmd.sh  run_docker_cmd.bat
Sources/Code/WASM/navdata_updater/src/: dispatcher.rs  lib.rs  util.rs
Sources/Code/WASM/navdata_updater/src/download/: downloader.rs  zip_handler.rs
docs/: RFC 001.md  RFC 002.md  RFC001.md
example/aircraft/PackageDefinitions/: navigraph-aircraft-navigation-data-interface-sample.xml
example/gauge/: .eslintrc.js  MyInstrument.css  MyInstrument.html  MyInstrument.tsx  env.d.ts  eslint.config.mjs  global.d.ts  msfssdk.d.ts  package.json  rollup.config.js  tailwind.config.js  tsconfig.json
example/gauge/Components/: Dropdown.css  Dropdown.tsx  Input.tsx  InterfaceSample.css  InterfaceSample.tsx  List.tsx  Utils.tsx
example/gauge/Lib/: navigraph.ts
example/gauge/Services/: AuthService.ts
examples/aircraft/: NavdataInterfaceAircraftProject.xml  NavdataUpdaterAircraftProject.xml  NavigationDataInterfaceAircraftProject.xml
examples/aircraft/PackageDefinitions/: navigraph-aircraft-navdata-interface-sample.xml  navigraph-aircraft-navigation-data-interface-sample.xml  navigraph-aircraft-updater-sample.xml
examples/aircraft_2024/PackageDefinitions/: navigraph-aircraft-navigation-data-interface-sample.xml
examples/gauge/: .eslintrc.js  MyInstrument.css  MyInstrument.html  README.md  env.d.ts  package-lock.json  package.json  rollup.config.js  tailwind.config.js  tsconfig.json
examples/gauge/Components/: Dropdown.tsx  Input.tsx  InterfaceSample.css  InterfaceSample.tsx  List.tsx  NavigraphLogin.css  NavigraphLogin.tsx  Utils.tsx
examples/gauge/Lib/: navigraph.ts
samples/gauge/: .env.example  .eslintrc.js  .prettierignore  .prettierrc  MyInstrument.tsx  README.md  env.d.ts  package-lock.json  package.json  rollup.config.js  tsconfig.json
samples/gauge/Components/: Dropdown.css  Dropdown.tsx  NavigraphLogin.css  NavigraphLogin.tsx
samples/gauge/Lib/: navigraph.ts
samples/gauge/lib/: navigraph.ts
scripts/: build.bat  build.sh  build_dev.bat  build_dev.sh  build_gauge.bat  build_js.bat  build_workflow.bat  cargo-msfs.ts  copy-wasm-module.ts  run_cargo_cmd.bat  run_docker_cmd.bat  run_docker_cmd.sh  run_docker_cmd_workflow.bat  setup.bat  test.bat  test.sh  test_workflow.bat  workflow.sh
src/database/: Cargo.toml
src/database/src/: database.rs  enums.rs  lib.rs  math.rs  sql_structs.rs  traits.rs  util.rs
src/database/src/manual/: database.rs
src/database/src/output/: airport.rs  airspace.rs  airway.rs  communication.rs  database_info.rs  fix.rs  gate.rs  gls_navaid.rs  mod.rs  ndb_navaid.rs  path_point.rs  procedure_leg.rs  runway.rs  vhf_navaid.rs  waypoint.rs
src/database/src/output/procedure/: approach.rs  arrival.rs  departure.rs  mod.rs
src/database/src/v2/: database.rs  mod.rs  sql_structs.rs
src/js/: .eslintrc.js  CommBus.d.ts  NavdataInterfaceTypes.ts  NavigraphNavdataInterface.ts  index.ts  package.json  tsconfig.json  tsup.config.ts
src/js/interface/: NavdataInterfaceTypes.ts  NavigationDataInterfaceTypes.ts  NavigraphNavdataInterface.ts  NavigraphNavigationDataInterface.ts
src/js/types/: airport.ts  airspace.ts  airway.ts  communication.ts  database_info.ts  fix.ts  gate.ts  gls_navaid.ts  index.ts  meta.ts  ndb_navaid.ts  (+7 more)
src/navdata-sdk/: NavdataInterfaceTypes.ts  NavigraphDFDTypes.ts  NavigraphNavdataInterface.ts  index.ts  navdata_sdk.ts  package.json  test.ts
src/navdata_updater/: Cargo.toml  README.md  build.bat  run_cargo_cmd.bat
src/test/: RandomBigint.d.ts  constants.ts  index.spec.ts  package_management.spec.ts  randomBigint.ts  setup.ts  test.ts  v1.spec.ts  v2.spec.ts
src/ts/: CommBus.d.ts  index.ts  package.json  tsconfig.json  tsup.config.ts
src/wasm/: Cargo.toml  build.rs
src/wasm/src/: config.rs  consts.rs  dispatcher.rs  funcs.rs  futures.rs  json_structs.rs  lib.rs  meta.rs  network_helper.rs  sentry_gauge.rs  sentry_util.rs  util.rs
src/wasm/src/database/: mod.rs  utils.rs
src/wasm/src/database/types/: airport.rs  airspace.rs  airway.rs  communication.rs  database_info.rs  enums.rs  fix.rs  gate.rs  gls_navaid.rs  mod.rs  ndb_navaid.rs  path_point.rs  procedure_leg.rs  runway.rs  sql.rs  vhf_navaid.rs  waypoint.rs
src/wasm/src/database/types/procedure/: approach.rs  arrival.rs  departure.rs  mod.rs
src/wasm/src/download/: downloader.rs  mod.rs  zip_handler.rs
src/wasm/src/query/: database.rs  enums.rs  math.rs  mod.rs  out_structs.rs  sql_structs.rs
src/wasm/src/query/output/: airport.rs  airway.rs  fix.rs  mod.rs  procedure_leg.rs
src/wasm/src/query/output/procedure/: departure.rs  mod.rs
src/wasm_navdata_interface/: Cargo.toml  README.md  build.bat  run_cargo_cmd.bat  rust-toolchain.toml
src/wasm_navdata_interface/.cargo/: config.toml
src/wasm_navdata_interface/scripts/: build.sh  run_docker_cmd.bat  run_docker_cmd.sh
src/wasm_navdata_interface/src/: dispatcher.rs  json_structs.rs  lib.rs  util.rs
src/wasm_navdata_interface/src/download/: downloader.rs  mod.rs  zip_handler.rs
src/wasm_navdata_interface/src/query/: database.rs
(+151 files in other folders)
