[package]
name = "navigation_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.32.0", features = ["bundled"] }
serde_rusqlite = "0.36.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "3.4.0"
regex = "1.10.2"
anyhow = "1.0"