[package]
name = "msfs-navigation-data-interface"
version = "1.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
chrono = "0.4.39"

[dependencies]
msfs = { git = "https://github.com/ZigTag/msfs-rs.git", rev = "f187073" }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
zip = { version = "0.6.4", default-features = false, features = ["deflate"] }
navigation_database = { path = "../database" }
sentry = { git = "https://github.com/pepperoni505/sentry-rust", default-features = false, features = [
    "anyhow",
] }
dotenvy_macro = "0.15.7"
anyhow = "1.0"
