[package]
name = "msfs-navigation-data-interface"
version = "1.2.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.97"
dotenv_codegen = "0.15.0"
futures-lite = "2.6.0"
msfs = { git = "https://github.com/flybywiresim/msfs-rs.git", rev = "599c75c" }
once_cell = "1.21.2"
paste = "1.0.15"
regex = "1.11.1"
rusqlite = { version = "0.32.0", features = ["bundled"] }
sentry = { version = "0.37.0", default-features = false, features = [
    "anyhow",
    "panic",
    "backtrace",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_rusqlite = "0.36.0"
serde_with = "3.12.0"
uuid = { version = "1.16.0", features = ["rng-rand", "v4"] }
zip = { version = "2.5.0", default-features = false, features = ["deflate"] }

[build-dependencies]
vergen-gitcl = { version = "1.0.8", features = ["build", "cargo"] }
