[package]
name = "navdata_updater"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
msfs = { git = "https://github.com/pepperoni505/msfs-rs.git", branch = "main" }